<resources>
  <string name="a_half_dashed">Dashed 180</string>
  <string name="a_half_degree_ccw">180° CCW</string>
  <string name="a_half_degree_cw">180° CW</string>
  <string name="a_half_degree_single_ccw">180° Single CCW</string>
  <string name="a_half_degree_single_cw">180° Single CW</string>
  <string name="a_half_degree_two_headed">180° 2 Headed</string>
  <string name="a_half_solid">Solid 180</string>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="about_us">About KingDraw</string>
  <string name="accept">Accept</string>
  <string name="account_agreement">Read and agree to the</string>
  <string name="account_and_security">Account and Security</string>
  <string name="activity_label_filetaglistactivity">Tag management</string>
  <string name="activity_label_photo_preview">Preview</string>
  <string name="acyclic_chain">Acyclic Chain</string>
  <string name="add">Add</string>
  <string name="add_file_tags">Add Filter Tags</string>
  <string name="add_floating_window">浮窗</string>
  <string name="affirm">Confirm</string>
  <string name="agree">Agree</string>
  <string name="ai_err_hint">The recognition result is null. If you're having trouble with the result, please report this image to us. Your feedback helps us improve it.</string>
  <string name="ai_memory_err">Insufficient available memory</string>
  <string name="align_bottom_edges">Align Bottom Edges</string>
  <string name="align_left_edges">Align Left Edges</string>
  <string name="align_left_right_centers">Align Left-Right Centers</string>
  <string name="align_right_edges">Align Right Edges</string>
  <string name="align_top_bottom_centers">Align Top-Bottom Centers</string>
  <string name="align_top_edges">Align Top Edges</string>
  <string name="alter_app_updata_msg">Updating app,please waiting…</string>
  <string name="angle">Angle</string>
  <string name="angle_interval">(0~180°)</string>
  <string name="any_bond">Any Bond</string>
  <string name="app_exit">Are you sure you want to logout?</string>
  <string name="app_name">KingDraw Chemical Structure Editor</string>
  <string name="app_updata_already_latest">This is the latest version</string>
  <string name="app_update">Check for Updates</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="area">Country or region</string>
  <string name="area_choose_list">Choose from the list</string>
  <string name="area_code">+86</string>
  <string name="argument">《Account Closing Agreement》</string>
  <string name="atom_labels">Atom Labels</string>
  <string name="authority_agree">Agree and Continue</string>
  <string name="authority_guidelines_content">1. You may choose to give us access to storage because you need to save the file locally; 
2. You may choose to give us access to camera to make it easy for you to feedback like taking and uploading photos; 
3. KingDraw needs your access to your device information (device status, device attributes, etc. ) to strengthen data security; 
4. The third-party SDK is integrated. The Privacy Policy provides instructions about what information we collect, and use; 
5. You can view the full version of the 《Terms of Service》 and 《Privacy Policy》 to understand how we collect, use, share, store and protect information.</string>
  <string name="authority_guidelines_title">Information Protection Guideline</string>
  <string name="authority_refuse">Disagree and Exit</string>
  <string name="authority_second_cancel">Exit</string>
  <string name="authority_second_message">Are you sure to exit? Click "Agree" to draw a structure.</string>
  <string name="authority_second_sure">Agree and Open</string>
  <string name="authority_second_title">Privacy policy confirmation</string>
  <string name="auto_login">Auto login</string>
  <string name="baidu_info"><Data>Search for “&lt;font color=#000000&gt;&lt;b&gt;KingDraw吧&lt;/b&gt;&lt;/font&gt;” in &lt;font color=#3385FF&gt;&lt;b&gt;www.baidu.com&lt;/b&gt;&lt;/font&gt; or Baidu phone terminal. Click to follow.</Data></string>
  <string name="baike_select_struct_hint">Unable to capture valid structure</string>
  <string name="batch_operate">Batch Operation</string>
  <string name="benzene">Benzene</string>
  <string name="bold_bond">Bold Bond</string>
  <string name="bold_double_bond">Bold Double Bond</string>
  <string name="bold_large">Bold(Large)</string>
  <string name="bold_medium">Bold(Medium)</string>
  <string name="bold_small">Bold(Small)</string>
  <string name="bold_width">Bold Width</string>
  <string name="bold_width_interval">(0.01~0.5cm)</string>
  <string name="bond_check">Proof</string>
  <string name="bonds_setting">Bonds</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="braces">Braces</string>
  <string name="brackets">Brackets</string>
  <string name="bring_to_front">Bring To Front</string>
  <string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
  <string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
  <string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
  <string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
  <string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
  <string name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
  <string name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
  <string name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
  <string name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
  <string name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
  <string name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
  <string name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
  <string name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
  <string name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
  <string name="cameraview_filter_lomoish">com.otaliastudios.cameraview.filters.LomoishFilter</string>
  <string name="cameraview_filter_none">com.otaliastudios.cameraview.filter.NoFilter</string>
  <string name="cameraview_filter_posterize">com.otaliastudios.cameraview.filters.PosterizeFilter</string>
  <string name="cameraview_filter_saturation">com.otaliastudios.cameraview.filters.SaturationFilter</string>
  <string name="cameraview_filter_sepia">com.otaliastudios.cameraview.filters.SepiaFilter</string>
  <string name="cameraview_filter_sharpness">com.otaliastudios.cameraview.filters.SharpnessFilter</string>
  <string name="cameraview_filter_temperature">com.otaliastudios.cameraview.filters.TemperatureFilter</string>
  <string name="cameraview_filter_tint">com.otaliastudios.cameraview.filters.TintFilter</string>
  <string name="cameraview_filter_vignette">com.otaliastudios.cameraview.filters.VignetteFilter</string>
  <string name="cancel">Cancel</string>
  <string name="check_word">Check the password</string>
  <string name="confirm">Confirm</string>
  <string name="contact_me">0086-532-67708489</string>
  <string name="default_atom_color">Colors by Elements</string>
  <string name="default_atom_color_hint">Turn on (default) or off (black)</string>
  <string name="draw_setting_title">Drawing Settings</string>
  <string name="email_address">E-mail：</string>
  <string name="email_info">pa@kingagroot.com</string>
  <string name="fixed_telephone">Telephone：</string>
  <string name="follow_baidu">Post-bar</string>
  <string name="follow_other">Other Contacts</string>
  <string name="follow_qq">Group Chats</string>
  <string name="follow_twitter">Follow on Twitter</string>
  <string name="follow_wechat">WeChat</string>
  <string name="follow_weibo">Sina Weibo</string>
  <string name="for_safe">For your account security, please enter your password</string>
  <string name="input_word">Please enter password</string>
  <string name="magnifier">Zoomer</string>
  <string name="new_pass">New password</string>
  <string name="new_pass_hint">Enter the new 6–16 digit password</string>
  <string name="old_pass">Old password</string>
  <string name="old_pass_hint">Enter the old password</string>
  <string name="original_image">Full image</string>
  <string name="photo_edit">Edit</string>
  <string name="photo_selected">Selected</string>
  <string name="pwd_by_email">Send the code via email</string>
  <string name="pwd_by_phone">Send the code via phone</string>
  <string name="qq_info"><Data>Search for “&lt;font color=#68A5E1&gt;&lt;b&gt;709524531&lt;/b&gt;&lt;/font&gt;” group in QQ from phone or PC. Click to follow and wait for the administrator to agree.</Data></string>
  <string name="save_pic">Save to Album</string>
  <string name="setting_usual_hint">Proof and Zoomer</string>
  <string name="submit">Submit</string>
  <string name="sure_pass">Confirm</string>
  <string name="sure_pass_hint">Enter the 6–16 digit password again</string>
  <string name="twitter_info"><Data>Search for “&lt;font color=#000000&gt;&lt;b&gt;KingDraw&lt;/b&gt;&lt;/font&gt;” or “&lt;font color=#000000&gt;&lt;b&gt;KingDraw_chem&lt;/b&gt;&lt;/font&gt;” at &lt;font color=#F56467&gt;&lt;b&gt;www.twitter.com&lt;/b&gt;&lt;/font&gt; and click to follow.</Data></string>
  <string name="wechat_info"><Data>Save the QR code to your phone, open WeChat, select Sweep, select the QR code from the album, and follow the “&lt;font color=#000000&gt;&lt;b&gt;KingDraw结构式编辑器&lt;/b&gt;&lt;/font&gt;”.</Data></string>
  <string name="weibo_info"><Data>Search for “&lt;font color=#000000&gt;&lt;b&gt;KingDraw清笔&lt;/b&gt;&lt;/font&gt;” in &lt;font color=#F56467&gt;&lt;b&gt;www.weibo.com&lt;/b&gt;&lt;/font&gt; or Weibo phone terminal. Click to follow.</Data></string>
</resources>