<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kingdraw="http://schemas.android.com/apk/res-auto">
  <ScrollView android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:fillViewport="true">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10.0dp"
                  android:layout_marginRight="10.0dp"
                  android:layout_marginStart="10.0dp"
                  android:layout_marginEnd="10.0dp">
      <LinearLayout android:orientation="vertical"
                    android:id="@id/ll_cn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp"
                  android:textColor="#deffffff"
                  android:gravity="center"
                  android:id="@id/tv_weixin_title"
                  android:padding="5.0dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10.0dp"
                  android:text="@string/follow_wechat" />
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:id="@id/tv_wechat_info"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="12.0dp"
                  android:layout_marginTop="8.0dp"
                  android:layout_marginRight="12.0dp"
                  android:text="@string/wechat_info"
                  android:textIsSelectable="true"
                  android:layout_marginStart="12.0dp"
                  android:layout_marginEnd="12.0dp" />
        <ImageView android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   kingdraw:srcCompat="@drawable/img_wechat" />
        <TextView android:textSize="16.0sp"
                  android:textColor="#de1c7dff"
                  android:gravity="center"
                  android:layout_gravity="center"
                  android:id="@id/tv_save_pic"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/save_pic" />
        <TextView android:textSize="16.0sp"
                  android:textColor="#deffffff"
                  android:gravity="center"
                  android:id="@id/tv_weibo_title"
                  android:padding="5.0dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20.0dp"
                  android:text="@string/follow_weibo" />
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:id="@id/tv_weibo_info"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="12.0dp"
                  android:layout_marginTop="8.0dp"
                  android:layout_marginRight="12.0dp"
                  android:text="@string/weibo_info"
                  android:textIsSelectable="true"
                  android:layout_marginStart="12.0dp"
                  android:layout_marginEnd="12.0dp" />
        <TextView android:textSize="16.0sp"
                  android:textColor="#deffffff"
                  android:gravity="center"
                  android:id="@id/tv_tieba_title"
                  android:padding="5.0dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40.0dp"
                  android:text="@string/follow_baidu" />
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:id="@id/tv_baidu_info"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="12.0dp"
                  android:layout_marginTop="8.0dp"
                  android:layout_marginRight="12.0dp"
                  android:text="@string/baidu_info"
                  android:textIsSelectable="true"
                  android:layout_marginStart="12.0dp"
                  android:layout_marginEnd="12.0dp" />
        <TextView android:textSize="16.0sp"
                  android:textColor="#deffffff"
                  android:gravity="center"
                  android:id="@id/tv_qq_title"
                  android:padding="5.0dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40.0dp"
                  android:text="@string/follow_qq" />
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:id="@id/tv_qq_info"
                  android:fitsSystemWindows="true"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="12.0dp"
                  android:layout_marginTop="8.0dp"
                  android:layout_marginRight="12.0dp"
                  android:text="@string/qq_info"
                  android:textIsSelectable="true"
                  android:layout_marginStart="12.0dp"
                  android:layout_marginEnd="12.0dp" />
      </LinearLayout>
      <LinearLayout android:orientation="vertical"
                    android:id="@id/ll_en"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp"
                  android:textColor="#deffffff"
                  android:gravity="center"
                  android:id="@id/tv_twitter_title"
                  android:padding="5.0dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40.0dp"
                  android:text="@string/follow_twitter" />
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:id="@id/tv_twitter_info"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="12.0dp"
                  android:layout_marginTop="8.0dp"
                  android:layout_marginRight="12.0dp"
                  android:text="@string/twitter_info"
                  android:textIsSelectable="true"
                  android:layout_marginStart="12.0dp"
                  android:layout_marginEnd="12.0dp" />
      </LinearLayout>
      <TextView android:textSize="16.0sp"
                android:textColor="#deffffff"
                android:gravity="center"
                android:id="@id/tv_other_title"
                android:padding="5.0dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40.0dp"
                android:text="@string/follow_other" />
      <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dp"
                    android:layout_marginTop="8.0dp"
                    android:layout_marginRight="12.0dp"
                    android:layout_marginStart="12.0dp"
                    android:layout_marginEnd="12.0dp">
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fixed_telephone" />
        <TextView android:textSize="14.0sp"
                  android:textColor="@color/black"
                  android:id="@id/tv_tel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/contact_me" />
      </LinearLayout>
      <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dp"
                    android:layout_marginRight="12.0dp"
                    android:layout_marginBottom="20.0dp"
                    android:layout_marginStart="12.0dp"
                    android:layout_marginEnd="12.0dp">
        <TextView android:textSize="14.0sp"
                  android:textColor="#de999999"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email_address" />
        <TextView android:textSize="14.0sp"
                  android:textColor="@color/black"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email_info"
                  android:textIsSelectable="true" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>