<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="20.0sp"
            android:textColor="#de000000"
            android:id="@id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dp"
            android:layout_marginTop="15.0dp"
            android:layout_marginRight="20.0dp"
            android:text="@string/check_word" />
  <TextView android:textSize="16.0sp"
            android:textColor="#8a000000"
            android:id="@id/tv_context"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dp"
            android:layout_marginTop="10.0dp"
            android:layout_marginRight="20.0dp"
            android:text="@string/for_safe" />
  <EditText android:textSize="16.0sp"
            android:textColor="#ff484848"
            android:id="@id/et_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dp"
            android:layout_marginTop="10.0dp"
            android:layout_marginRight="20.0dp"
            android:hint="@string/input_word"
            android:lines="1"
            android:inputType="textPassword" />
  <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
    <Button android:textSize="14.0sp"
            android:textColor="#ff333333"
            android:gravity="center|right"
            android:id="@id/btn_sure"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20.0dp"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:layout_marginEnd="20.0dp"
            android:layout_alignParentEnd="true" />
    <Button android:textSize="14.0sp"
            android:textColor="#ff333333"
            android:gravity="center|right"
            android:id="@id/btn_cancel"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toLeftOf="@id/btn_sure"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:layout_toStartOf="@id/btn_sure" />
  </RelativeLayout>
</LinearLayout>