<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:background="@drawable/bg_white_top_radius"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="17.0sp"
            android:textColor="#ff000000"
            android:gravity="center"
            android:id="@id/tv_pwd_phone"
            android:layout_width="fill_parent"
            android:layout_height="50.0dp"
            android:text="@string/pwd_by_phone" />
  <View android:background="#fff2f2f2"
        android:layout_width="fill_parent"
        android:layout_height="2.0dp" />
  <TextView android:textSize="17.0sp"
            android:textColor="#ff000000"
            android:gravity="center"
            android:id="@id/tv_pwd_email"
            android:layout_width="fill_parent"
            android:layout_height="50.0dp"
            android:text="@string/pwd_by_email" />
  <View android:background="#fff2f2f2"
        android:layout_width="fill_parent"
        android:layout_height="10.0dp" />
  <TextView android:textSize="17.0sp"
            android:textColor="#ff000000"
            android:gravity="center"
            android:id="@id/tv_pwd_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50.0dp"
            android:layout_marginBottom="40.0dp"
            android:text="@string/cancel" />
</LinearLayout>