<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="45.0dp">
    <TextView android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:paddingLeft="20.0dp"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="@string/old_pass"
              android:lines="1"
              android:paddingStart="20.0dp" />
    <EditText android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:id="@id/et_pass_old"
              android:background="#00ffffff"
              android:paddingLeft="5.0dp"
              android:layout_width="0.0dp"
              android:layout_height="fill_parent"
              android:layout_marginRight="20.0dp"
              android:hint="@string/old_pass_hint"
              android:lines="1"
              android:layout_weight="1.0"
              android:inputType="textPassword"
              android:layout_marginEnd="20.0dp" />
  </LinearLayout>
  <View android:background="#d9d9d9"
        android:layout_width="fill_parent"
        android:layout_height="1.0dp"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginStart="20.0dp"
        android:layout_marginEnd="20.0dp" />
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="45.0dp">
    <TextView android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:paddingLeft="20.0dp"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="@string/new_pass"
              android:lines="1"
              android:paddingStart="20.0dp" />
    <EditText android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:id="@id/et_pass_new"
              android:background="#00ffffff"
              android:paddingLeft="5.0dp"
              android:layout_width="0.0dp"
              android:layout_height="fill_parent"
              android:layout_marginRight="20.0dp"
              android:hint="@string/new_pass_hint"
              android:lines="1"
              android:layout_weight="1.0"
              android:inputType="textPassword"
              android:layout_marginEnd="20.0dp" />
  </LinearLayout>
  <View android:background="#d9d9d9"
        android:layout_width="fill_parent"
        android:layout_height="1.0dp"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginStart="20.0dp"
        android:layout_marginEnd="20.0dp" />
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="45.0dp">
    <TextView android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:paddingLeft="20.0dp"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="@string/sure_pass"
              android:lines="1"
              android:paddingStart="20.0dp" />
    <EditText android:textSize="12.0sp"
              android:textColor="#ff333333"
              android:gravity="center|start"
              android:id="@id/et_pass_sure"
              android:background="#00ffffff"
              android:paddingLeft="5.0dp"
              android:layout_width="0.0dp"
              android:layout_height="fill_parent"
              android:layout_marginRight="20.0dp"
              android:hint="@string/sure_pass_hint"
              android:lines="1"
              android:layout_weight="1.0"
              android:inputType="textPassword"
              android:layout_marginEnd="20.0dp" />
  </LinearLayout>
  <View android:background="#d9d9d9"
        android:layout_width="fill_parent"
        android:layout_height="1.0dp"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginStart="20.0dp"
        android:layout_marginEnd="20.0dp" />
  <Button android:id="@id/btn_pass_sure"
          android:layout_marginTop="20.0dp"
          android:text="@string/submit"
          style="@style/button_style" />
</LinearLayout>