<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.viewpager.widget.ViewPager android:id="@id/viewpager"
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dp"
                        android:layout_weight="1.0" />
  <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="50.0dp">
    <Button android:textSize="14.0sp"
            android:textColor="@android:color/black"
            android:id="@id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/photo_edit"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    <androidx.appcompat.widget.AppCompatCheckBox android:id="@id/cb_original"
                          android:layout_width="wrap_content"
                          android:layout_height="fill_parent"
                          android:text="@string/original_image"
                          android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatCheckBox android:id="@id/cb_selected"
                          android:paddingRight="10.0dp"
                          android:layout_width="wrap_content"
                          android:layout_height="fill_parent"
                          android:text="@string/photo_selected"
                          android:layout_alignParentRight="true" />
  </RelativeLayout>
</LinearLayout>